# algorand-prediction-market

./: CLAUDE.md  FRONTEND_INTEGRATION.md  README.md  algorand-prediction-market.code-workspace  start-dev.sh
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CreateMarketForm.tsx  MarketCard.tsx  WalletConnection.tsx
frontend/src/hooks/: useMarkets.ts  useWallet.ts
frontend/src/types/: algorand.ts
projects/algorand-prediction-market/: .algokit.toml  README.md  build_and_verify.py  pyproject.toml
projects/algorand-prediction-market/.algokit/: .copier-answers.yml
projects/algorand-prediction-market/examples/: sample_usage.py
projects/algorand-prediction-market/smart_contracts/: __init__.py
projects/algorand-prediction-market/smart_contracts/artifacts/prediction_market/: PredictionMarket.approval.puya.map  PredictionMarket.approval.teal  PredictionMarket.arc56.json  prediction_market_client.py
projects/algorand-prediction-market/smart_contracts/prediction_market/: PredictionMarket.approval.puya.map  PredictionMarket.arc32.json  contract.py  deploy_config.py
projects/algorand-prediction-market/tests/: prediction_market_test.py
